--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.0-beta1",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -15,7 +16,10 @@
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
