--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   "scripts": {
     "dev1": "react-scripts start",
     "dev": "concurrently \"nodemon server.js\" \"npm run dev1\"",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3003"
 }
