--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,21 @@
 {
   "cSpell.words": [
+    "Helvetica",
+    "Lato",
+    "Neue",
     "Ninjaneer",
     "Sidenav",
+    "bgcolor",
     "browserslist",
+    "cellpadding",
+    "cellspacing",
     "cizm",
     "labelledby",
     "mlogo",
     "monospace",
     "postbuild",
-    "s"
+    "s",
+    "textbox",
+    "valign"
   ]
 }
