project cards done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,24 @@
 {
   "cSpell.words": [
+    "Cras",
+    "Dapibus",
     "Helvetica",
     "Lato",
     "Neue",
     "Ninjaneer",
     "Sidenav",
+    "Vestibulum",
     "bgcolor",
     "browserslist",
     "cellpadding",
     "cellspacing",
     "cizm",
+    "facilisis",
+    "justo",
     "labelledby",
     "mlogo",
     "monospace",
+    "odio",
     "postbuild",
     "s",
     "textbox",
