--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "cellpadding",
     "cellspacing",
     "cizm",
+    "emaillllllllllllllllllllllll",
     "facilisis",
     "justo",
     "labelledby",
